--- a/top.html
+++ b/top.html
@@ -35,7 +35,7 @@
 
         <div class="collapse navbar-collapse" id="bs-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/sample">sample</a></li>
+            <li><a href="/url">title</a></li>
           </ul>
         </div>
 
